fix horizontal scroll  issue and set up mobile layout for project page

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -11,19 +11,26 @@
   /* Font */
   font-family: 'Inter', sans-serif;
   text-align: center;
-  display: block;
-  background-color: white;
+  display: inline-block;
+  background-color: rgb(206, 210, 209);
+ 
+}
+
+body{
+  max-width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 
 .banner{
   background: linear-gradient(var(--dark-blue), var(--medium-blue));
   color: white;
-  margin: -1em;
-  margin-bottom: 0;
-  padding: 1vw 0;
+  padding-top: 1vh;
   padding-bottom: 1vh;
-  border-radius: 1em;
+  border-bottom-left-radius: 1em;
+  border-bottom-right-radius: 1em;
+  
 }
 
 .banner p{
@@ -31,12 +38,12 @@
 }
 
 .name {
-  font-size: 10vw;
+  font-size: 8vw;
 }
 
 .username{
   margin-top: -10%;
-  font-size: 8vw;
+  font-size: 6vw;
 }
 
 .tab button{
@@ -51,9 +58,12 @@
 }
 
 .tab button.active{
+  width: 20vw;
+  height: 10vw;
   border-bottom-color: var(--light-blue);
   color: var(--highlight-blue);
 }
+
 
 .tab button:hover{
   border-bottom-color: var(--light-blue);
@@ -61,11 +71,11 @@
 }
 
 .header{
-  font-size: 4vw;
+  font-size: 5vw;
 }
 
 .title {
-  font-size: 3vw;
+  font-size: 3.5vw;
 }
 
 .projects{
@@ -134,16 +144,13 @@
 
 
 @media (width >= 700px){
-  body{
-    width: 100vw;
-  }
+
   .banner{
     background: linear-gradient(var(--dark-blue), var(--medium-blue));
     color: white;
-    margin: -1em;
-    margin-bottom: 3;
-    
-    border-radius: 1em;
+    width: auto;
+    border-bottom-left-radius: 1em;
+    border-bottom-right-radius: 1em;
    
   }
 
@@ -167,8 +174,8 @@
 
   .tab{
     height: 10vh;
-    margin-top: 1vh;
-    padding-top: 1vh;
+    margin-top: 1vw;
+    padding-top: 1vw;
   }
 
   .tab button{
@@ -241,23 +248,20 @@
   .summaryTitle{
     margin: auto;
     margin-top: 30%;
-
-   
   }
 
   .container:hover .card{
-    filter: blur(6px);
+    filter: blur(4px);
     animation: blur 0.25s;
     border-color: var(--light-blue);  
+    opacity: 0.5;
   }
 
   .container:hover .cardTitle{
     opacity: 1;
     animation: appear 0.5s;
-    color: white;
-    background-color: rgba(47, 225, 244, 0.3);
-    border-radius: 1em;
-    box-shadow: 0px 0px 16px 0px  rgba(47, 225, 244, 0.3);
+    color: black;
+    border-radius: 1em;   
   }
 
   .summaryTitle.light{
@@ -273,12 +277,13 @@
   @keyframes appear{
     0%{
       opacity: 0;
+
     }
     50%{
-     opacity: 0.3;
+     opacity: 0.5;
     }
-    100%{
-      opacity: 0.9;
+    90%{
+      opacity: 1;
     }
   }
 
@@ -286,15 +291,17 @@
   @keyframes blur {
     0%{
       filter: blur(0px);
-     
+      opacity: 1;
     }
     50%{
       filter: blur(2px);
+      opacity: 0.7;
       color: rgba(0, 0, 0, 0.5);
      
     }
-    100%{
+    90%{
       filter: blur(4px);
+      opacity: 0.5;
       color: rgba(0, 0, 0, 1);
     }
     
